--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1.1-3
+######## 10-13-11
+Added optional compiling of likelihood function using cmpfun().
+
+######## 09-09-11
+Error handling of proposal distribution dimensionality (Thanks to paul.edwards1@mail.mcgill.ca for the catch)
+
 1.1-2
 ######## 04-08-11
 Fixed sign direction in Metro_Hastings() adapt_par[4] to match with manual.
