--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1.1-4
+######## 11-05-11
+Cleaned up depreciated dependencies. No longer relies on QRMlib.
+
 1.1-3
 ######## 10-13-11
 Added optional compiling of likelihood function using cmpfun().
